--- a/appspec.yml
+++ b/appspec.yml
@@ -10,3 +10,7 @@ hooks:
     - location: scripts/start_server.sh
       timeout: 300
       runas: root
+  AfterInstall:
+    - location: scripts/permission.sh
+      timeout: 300
+      runas: root
