--- a/appspec.yml
+++ b/appspec.yml
@@ -6,6 +6,10 @@ files:
       
 
 hooks:  
+  BeforeInstall:
+    - location: scripts/beforeInstall.sh
+      timeout: 300
+      runas: root
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
