--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
     - source: /
-      destination: /var/www/ankit.squareops.xyz/
+      destination: /var/www/html/ankit.squareops.xyz/public_html/
       
 
 hooks:
