--- a/appspec.yml
+++ b/appspec.yml
@@ -14,3 +14,11 @@ hooks:
     - location: scripts/permission.sh
       timeout: 300
       runas: root
+  ApplicationStop:
+    - location: scripts/stop.sh
+      timeout: 300
+      runas: root
+  BeforeInstall:
+    - location: scripts/b_install.sh
+      timeout: 300
+      runas: root  
