--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ stages:
   - job: BuildJob
     pool:
       vmImage: $(vmImageName)
-    steps:
+    steps: AzureRmWebAppDeployment@4
     - script: |
         sudo update-alternatives --set php /usr/bin/php$(phpVersion)
         sudo update-alternatives --set phar /usr/bin/phar$(phpVersion)
