Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 # PHP as Linux Web App on Azure
-- task: AzureRmWebAppDeployment@4
+- task: 
   inputs:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Free Trial (b843e926-887c-44f5-b8d2-892bc2979df8)'
